--- a/views/room.ejs
+++ b/views/room.ejs
@@ -50,7 +50,7 @@
                 <div class="container-fluid music-grid-container">
                     <div class="row music-grid justify-content-center">
                         <div class="col-3 music-song">
-                            <audio src="music/Born To Shine - Diljit Dosanjh.mp3" id="btn-1-audio"></audio>
+                            <audio src="music/Born To Shine - Diljit Dosanjh.mp3" id="btn-1-audio" onended="musicEnded(id)"></audio>
                             <img src="img/born-to-shine.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Born To Shine - Diljit Dosanjh</span>
                             <div class="play-btn-layover"></div>
@@ -60,7 +60,7 @@
                                 onclick="handlepausesound(id)" id="btn-1-">
                         </div>
                         <div class="col-3 music-song">
-                            <audio src="ringtone.mp3" id="btn-2-audio"></audio>
+                            <audio src="ringtone.mp3" id="btn-2-audio" onended="musicEnded(id)"></audio>
                             <img src="img/big-liar.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Bad Liar - Imagine Dragons</span>
                             <div class="play-btn-layover"></div>
@@ -70,7 +70,7 @@
                                 onclick="handlepausesound(id)" id="btn-2-">
                         </div>
                         <div class="col-3 music-song">
-                            <audio src="music/Safar - Bhuvan Bam.mp3" id="btn-3-audio"></audio>
+                            <audio src="music/Safar - Bhuvan Bam.mp3" id="btn-3-audio" onended="musicEnded(id)"></audio>
                             <img src="img/safar.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Safar - Bhuvan Bam</span>
                             <div class="play-btn-layover"></div>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="row music-grid justify-content-center">
                         <div class="col-3 music-song">
-                            <audio src="ringtone.mp3" id="btn-4-audio"></audio>
+                            <audio src="ringtone.mp3" id="btn-4-audio" onended="musicEnded(id)"></audio>
                             <img src="img/ranveer.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Utth Jaa Rey - Jasleen Royal</span>
                             <div class="play-btn-layover"></div>
@@ -93,7 +93,7 @@
 
                         </div>
                         <div class="col-3 music-song">
-                            <audio src="ringtone.mp3" id="btn-5-audio"></audio>
+                            <audio src="ringtone.mp3" id="btn-5-audio" onended="musicEnded(id)"></audio>
                             <img src="img/jassManak.jpeg" alt="song-image" class="song-img">
                             <span class="song-name">No Competition - Jass Manak | Divine</span>
                             <div class="play-btn-layover"></div>
@@ -104,7 +104,7 @@
 
                         </div>
                         <div class="col-3 music-song">
-                            <audio src="ringtone.mp3" id="btn-6-audio"></audio>
+                            <audio src="ringtone.mp3" id="btn-6-audio" onended="musicEnded(id)"></audio>
                             <img src="img/maroon5.jpg" alt="song-image" class="song-img">
                             <span class="song-name">Nobody's Love - Maroon 5</span>
                             <div class="play-btn-layover"></div>
