--- a/public/homepage.css
+++ b/public/homepage.css
@@ -57,7 +57,8 @@ body {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 80px;
     background-color: rgba(255, 255, 255, 0.8);
-    height: 60vh;
+    padding-bottom: 4rem;
+    /* height: 100%; */
     margin-right: 4rem;
 }
 
@@ -65,7 +66,7 @@ body {
     text-transform: capitalize;
     color: #242424;
     font-size: 3.5rem;
-    margin-top: 35%;
+    margin-top: 30%;
 }
 
 .create-btn {
@@ -78,7 +79,7 @@ body {
     font-size: 1.4rem;
     color: #fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
-    margin-top: 10%;
+    margin-top: 8%;
     outline: none;
 }
 
@@ -92,14 +93,15 @@ body {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 80px;
     background-color: rgba(255, 255, 255, 0.8);
-    height: 60vh;
+    padding-bottom: 4rem;
+    /* height: 100%; */
 }
 
 .join-room-heading {
     text-transform: capitalize;
     color: #242424;
     font-size: 3.5rem;
-    margin-top: 25%;
+    margin-top: 22%;
 }
 
 .input-roomid {
