--- a/views/room.ejs
+++ b/views/room.ejs
@@ -19,7 +19,7 @@
     <script>
         const roomid = "<%= roomid %>"
     </script>
-    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script defer src="https://sync-m.herokuapp.com/socket.io/socket.io.js"></script>
     <script src="script.js" defer></script>
 </head>
 
